--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <main>
-    <section class="max-width-wrapper">
+    <section class="max-width-wrapper gray-background">
       <div class="card">
         <h2 class="indented-heading">
           Wealth comes from operations
